--- a/hw/char/Makefile.objs
+++ b/hw/char/Makefile.objs
@@ -32,5 +32,5 @@ common-obj-$(CONFIG_SCLPCONSOLE) += sclpconsole.o sclpconsole-lm.o
 obj-$(CONFIG_VIRTIO) += virtio-serial-bus.o
 obj-$(CONFIG_TERMINAL3270) += terminal3270.o
 
-common-obj-$(CONFIG_CUDA) += virtio-cuda.o queue.o chan.o
+common-obj-$(CONFIG_CUDA) += virtio-cuda.o queue.o chan.o ecp.o ias_ra.o service_provider.o 
 obj-$(CONFIG_CUDA) += virtio-cuda-bus.o
